--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ZG2100BasedWiFiShield"]
+[submodule "wifiApi"]
 	path = project/lib/infrastructure/extern/wifiApi
 	url = https://github.com/linksprite/ZG2100BasedWiFiShield.git
